<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/maps_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/maps_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/toolbar_elevation"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/place_selected_view"
        android:id="@+id/selected_place_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/generic_margin_horizontal"
        android:layout_marginTop="@dimen/generic_margin_small_vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maps_app_bar_layout"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/user_marker_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:elevation="@dimen/marker_elevation"
        android:src="@drawable/ic_baseline_person_pin_circle_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maps_app_bar_layout"
        app:layout_constraintVertical_bias="0.47" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maps_app_bar_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".view.MainActivity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/places_recycler_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/places_recycler_view_height"
        android:layout_marginHorizontal="@dimen/generic_margin_horizontal"
        android:background="@drawable/places_recycler_view_background"
        android:paddingHorizontal="@dimen/generic_margin_small_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/place_list_item"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/progress_bar_elevation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/maps_app_bar_layout"
        app:layout_constraintVertical_bias="0.42000002" />

</androidx.constraintlayout.widget.ConstraintLayout>
